--- a/machine_learning_trading_bot.ipynb
+++ b/machine_learning_trading_bot.ipynb
@@ -2178,7 +2178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: This shittily designed, poorly formatted, and overly hand-held challenge that was largely inconsistent with Module 14 material was a waste of my goddamned time. "
+    "Conclusion: This shittily designed, poorly formatted, and overly hand-held challenge that was largely inconsistent with Module 14 material was a waste of my goddamned time.  I have to spend more time reconciling the instructions in the main summary with the instructions in the Jupyter cells than actually learning something. Take a look at the Markdown outline of this Challenge for example and tell me if that's quality or if it makes any sense.  Why do I as the student have to wade through that?  Give me whatever grade you want. "
    ]
   }
  ],
